--- a/_layouts/blog.html
+++ b/_layouts/blog.html
@@ -19,18 +19,31 @@
   <body>
     
     
-    <div class="intro-header">    
-      <div class="container">
-        <div class="post-heading">
-            <h1>{{page.title}}</h1>
-            <span class="meta">Posted by <a href="{{ site.baseurl }}/about"> {{page.author}}
-            </a> on {{ page.date | date: "%B %e, %Y" }}
-            <a href="{{ site.baseurl }}/"> { Return to Blog }</a>
-            </span>
-        </div>
-            
-      </div>
+    <div class="intro-header"> 
+       <div class="wrapper-masthead">
+         <div class="container">
+           <header class="masthead clearfix">
+             <div class="site-info">
+               <h1 class="site-name"><a href="{{ site.baseurl }}/">{{ site.name }}</a></h1>
+               <p class="site-description">{{ site.description }}</p>
+             </div>
+             <nav>
+               <a href="{{ site.baseurl }}/">About</a>
+               <a href="{{ site.baseurl }}/blog">Blog</a>
+               <a href="{{ site.baseurl }}/projects">Projects</a>
+             </nav>
+             </header>
+             <div class="post-heading">
+              <h1>{{page.title}}</h1>
+              <span class="meta">Posted by <a href="{{ site.baseurl }}/about"> {{page.author}}
+                </a> on {{ page.date | date: "%B %e, %Y" }}
+                <br><br><a href="{{ site.baseurl/blog }}/">Return to Blog</a>
+              </span>
+            </div>
+         </div>
+       </div> 
     </div>
+
     
 
     <div id="main" role="main" class="container">
