--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -27,8 +27,8 @@
                <p class="site-description">{{ site.description }}</p>
              </div>
              <nav>
-               <a href="{{ site.baseurl }}/">Blog</a>
-               <a href="{{ site.baseurl }}/about">About</a>
+               <a href="{{ site.baseurl }}/">About</a>
+               <a href="{{ site.baseurl }}/blog">Blog</a>
                <a href="{{ site.baseurl }}/projects">Projects</a>
              </nav>
            </header>
@@ -36,27 +36,19 @@
        </div>
        
         <div class="container">
-            <div class="space-small"></div>
+           
            
             <div class="centered">
               <ul class="ch-grid">
                 <li>
                     <div class="ch-item ch-img-1">				
-                        <div class="ch-info-wrap">
-                            <div class="ch-info">
-                                <div class="ch-info-front ch-img-1"></div>
-                                <div class="ch-info-back">
-                                    <h3>{{site.name}}</h3>
-                                    <p></br><a href="https://linkedin.com/in/{{ site.footer-links.linkedin }}">View on LinkedIn</a></p>
-                                </div>	
-                            </div>
-                        </div>
+                                <div class="ch-img-1"></div>
                     </div>
                 </li>
             </ul>
         </div>
              
-             <div class="space-medium"></div>
+             <div class="space-extra-small"></div>
             
         </div>
     </div>
