--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -18,16 +18,16 @@ $blue: #4183C4;
 // Main theme colors 
 // Some cool main theme colors(violet:#8476ad;blue:#5cacee;red:#ff7373,#ff6f69;green:#6acf64,#2ddbb3;orange:#ffa268)
 
-$mono-color:#8476ad;                // main theme color(header, links, footer icons, buttons, post-title)
+$mono-color:#1AC7C0;                // main theme color(header, links, footer icons, buttons, post-title)
 $hl-color: $darkGray;              // header link color (author name and posted on date) for blog post meta 
 $navbar-hover-color:$gray;        // navbar hover color (site name and navbar links hover color)
-$link-color: $darkerGray;        // normal hyperlink color other than the ones above.
+$link-color: #1AC7C0;        // normal hyperlink color other than the ones above.
 
 
 // Heading colors
 // You can play around with these too!
-$h1-color: $mono-color;
-$h2-color: $mono-color; 
+$h1-color: #FE2127;
+$h2-color: #FE2127; 
 $h3-color: $darkerGray; 
 $h4-color: $gray; 
 
@@ -44,7 +44,7 @@ $georgia: Georgia, serif;
 
 // Mobile breakpoints
 @mixin mobile {
-  @media screen and (max-width: 640px) {
+  @media screen and (max-width: 540px) {
     @content;
   }
 }
